# mediateca

./: .env.template  .gitignore  AGENTS.md  HLS_ABR_DESIGN.md  MIGRATION_CLOUD01.md  README.md  docker-compose.yml  setup-server.sh
orchestrator/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
orchestrator/alembic/: env.py
orchestrator/alembic/versions/: 0001_initial.py  0002_cascade_item_fks.py  0003_retention.py
orchestrator/src/orchestrator/: app.py  config.py  logging_setup.py
orchestrator/tests/: conftest.py
orchestrator/tests/fixtures/: ffprobe_dual_audio.json  ffprobe_italian_only.json  radarr_on_import.json  sonarr_on_import.json
orchestrator/tests/integration/: test_flow_happy.py  test_flow_incomplete.py  test_flow_merge.py  test_flow_merge_safety.py  test_retention_e2e.py
orchestrator/tests/unit/: test_arr_client.py  test_auth_dep.py  test_catch_up.py  test_config.py  test_custom_formats.py  test_custom_formats_api.py  test_discard_or_adopt.py  test_encoder_client.py  test_health.py  test_inbox_processor.py  test_iso639.py  test_items_api.py  test_items_timeseries.py  test_jellyfin_defaults.py  test_logs_api.py  test_merge_safety.py  test_merger.py  test_models.py  test_notify.py  test_pipeline_api.py  test_pipeline_legacy_absorb.py  test_policy.py  test_probe.py  test_resolve_library_path.py  test_retention_api.py  test_retention_arr_catalog.py  test_retention_disk_pressure.py  test_retention_executor.py  test_retention_jellyfin_sync.py  test_retention_lookahead.py  test_state.py  (+8 more)
(+233 files in other folders)
