[project]
name = "orchestrator"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "RET"]

[tool.ruff.lint.per-file-ignores]
# FastAPI Depends() in function signatures is intentional — B008 is a false positive here
"src/orchestrator/api/*.py" = ["B008"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

[[tool.mypy.overrides]]
# docker-py and APScheduler ship no py.typed marker — ignore missing stubs
module = ["docker", "docker.*", "apscheduler", "apscheduler.*", "sse_starlette", "sse_starlette.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
